# xsd-schema

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  UNSAFE.md  build.rs
assets/: xlink.xsd  xml.xsd
assets/unicode/: .gitignore
doc/: BUFFER_DOCUMENT_OVERVIEW.md  EXTENSIBILITY.md  INTRODUCTION.md  OVERVIEW.md
examples/: books.xml  purchaseOrder.xml
scripts/: gen_xsd_unicode.py  particle-gate.sh
src/: arenas.rs  builder.rs  embedded.rs  error.rs  ids.rs  lib.rs  pipeline.rs  pipeline_tests.rs  regex_convert.rs  regex_xsd_unicode.rs
src/compiler/: all_group.rs  compile.rs  compile_tests.rs  error.rs  fragment.rs  mod.rs  nfa.rs  open_content.rs  particle.rs  substitution.rs  upa.rs  upa_tests.rs
src/document/: buffer.rs  builder.rs  element_index.rs  error.rs  mod.rs  namespace.rs  navigator.rs  node.rs  page.rs  qname.rs  source_spans.rs  strings.rs  type_remap.rs  typed_builder.rs
src/namespace/: context.rs  mod.rs  qname.rs  table.rs
src/navigator/: mod.rs  roxmltree.rs
src/parser/: assemble.rs  attrs.rs  frames.rs  location.rs  mod.rs  parse.rs  reader.rs  resolver.rs  structure.rs
src/parser/frames/: annotations.rs  core.rs  directives.rs  elements.rs  facets.rs  factory.rs  groups.rs  helpers.rs  identity.rs  notation.rs  open_content.rs  schema.rs  skip.rs  tests.rs  types.rs  wildcards.rs  xsd11.rs  xsd_names.rs
src/schema/: annotation.rs  composition.rs  cta.rs  decl.rs  dependencies.rs  derivation.rs  edc.rs  group.rs  inline.rs  mod.rs  model.rs  override_dir.rs  redefine.rs  resolver.rs  wildcard.rs
src/types/: builtin.rs  complex.rs  convert.rs  equality.rs  facets.rs  mod.rs  sequence.rs  simple.rs  validators.rs  value.rs
src/validation/: active_axis.rs  alternatives.rs  assertions.rs  asttree.rs  content.rs  context.rs  errors.rs  hint_loader.rs  identity.rs  identity_lexer.rs  identity_parser.rs  info.rs  mod.rs  navigator_driver.rs  quick_xml_driver.rs  runtime.rs  runtime_tests.rs  simple.rs  validator.rs
src/xpath/: api.rs  arena.rs  ast.rs  atomize.rs  axis_iterators.rs  bind.rs  bind_tests.rs  boolean.rs  cast.rs  context.rs  error.rs  eval.rs  eval_tests.rs  item_set.rs  iter_adapters.rs  iterator.rs  lexer.rs  mod.rs  node_ops.rs  node_test.rs  node_test_tests.rs  operators.rs  parser.lalrpop  parser.rs  quantified.rs  roxmltree.rs  sequence_ops.rs  string_ops.rs  timsort.rs  tree_comparer.rs  type_info.rs
src/xpath/ast/: control_flow.rs  core.rs  expressions.rs  functions.rs  mod.rs  operators.rs  paths.rs  tests.rs  types.rs
src/xpath/functions/: aggregate.rs  datetime.rs  extensible.rs  mod.rs  node.rs  numeric.rs  qname.rs  regex.rs  registry.rs  sequence.rs  signature.rs  special.rs  string.rs  uri.rs
tests/: xpath_integration.rs
tests/conformance/: README.md  driver.rs  report.rs
tests/xqts/: README.md  catalog.rs  compare.rs  driver.rs  filter.rs  prepare.rs
