[package]
name = "xsd-schema"
version = "0.1.0"
edition = "2021"
authors = ["XmlPad Project"]
description = "XSD 1.0 schema parser and validator"
license = "MIT OR Apache-2.0"

[dependencies]
# XML parsing
quick-xml = "0.31"           # Streaming XML parser with byte position tracking
roxmltree = "0.19"           # Read-only tree for W3C test suite parsing

# Data structures
slotmap = "1.0"              # Arena storage with typed keys
bitflags = "2.4"             # DerivationSet flags

# Error handling
thiserror = "1.0"            # Error derive macros

# Pattern matching and validation
regex = "1.10"               # Pattern facet validation

# Date/time types (for Phase 2 - type system)
chrono = "0.4"               # Date/time types

# Precision decimals (for Phase 2 - type system)
rust_decimal = "1.33"        # xs:decimal precision

# XSD atomic value parsing/formatting
num-bigint = "0.4"           # Unbounded integers for xs:integer
base64 = "0.22"              # Base64 encoding/decoding
hex = "0.4"                  # Hex encoding/decoding

# Async support (optional, enabled by "async" feature)
futures = { version = "0.3", optional = true }

# XPath parser (LALRPOP runtime) - only needed with xsd11
lalrpop-util = { version = "0.22.2", optional = true }

# Lazy statics (used by validator registry and xpath function registry)
once_cell = "1.19"

# Arena allocator for BufferDocument (only with xsd11)
bumpalo = { version = "3", features = ["collections"], optional = true }

# Unicode normalization (for fn:normalize-unicode)
unicode-normalization = { version = "0.1", optional = true }

# XML Schema 1.1 regex engine (native XSD/XPath regex with ICU4X Unicode)
regexml = { version = "0.2", optional = true }

[build-dependencies]
lalrpop = { version = "0.22.2", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"    # Better assertion output in tests
criterion = "0.5"            # Benchmarking (optional)

[features]
default = ["unicode-normalization"]
xsd11 = ["dep:lalrpop-util", "dep:lalrpop", "dep:bumpalo", "dep:regexml"]
unicode-normalization = ["dep:unicode-normalization"]
async = ["dep:futures"]

[lib]
name = "xsd_schema"
path = "src/lib.rs"

[[test]]
name = "conformance"
path = "tests/conformance/driver.rs"
harness = false

[[test]]
name = "xpath_integration"
path = "tests/xpath_integration.rs"
required-features = ["xsd11"]

[[test]]
name = "xqts_xpath"
path = "tests/xqts/driver.rs"
harness = false
required-features = ["xsd11"]
